--- a/.editorconfig
+++ b/.editorconfig
@@ -19,3 +19,7 @@ indent_size = 2
 [Dockerfile]
 trim_trailing_whitespace = false
 insert_final_newline = false
+
+[Makefile]
+indent_style = tab
+indent_size = 4
