Added v19 of dind

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
   "files.autoSaveDelay": 1000,
   "files.associations": {
     "Dockerfile-*": "dockerfile",
+    "Dockerfile.*": "dockerfile",
   },
 }
